ultima actualizacion con animacion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
+<div id="telon-animacion" style="
+  display: flex;
+  justify-content: center;
+  align-items: center;
+">
+  <img src="img/CrioGroup.png" alt="Cargando..." id="imagenCentral" style="width: auto;">
+</div>
+
 <body class="bg-light d-flex">
 
   <aside class="bg-dark text-white p-3" style="width: 250px; min-height: 100vh;">
