--- a/login.html
+++ b/login.html
@@ -22,6 +22,15 @@
     </form>
     <div id="mensaje" class="mt-3 text-center text-danger"></div>
   </div>
+  <!-- Pantalla de animación -->
+<div id="pantallaCarga">
+  <div id="circuloAnimado"></div>
+  <img src="img/CrioGroup.png" alt="Cargando..." id="imagenCentral">
+  <p id="mensajeBienvenida" class="text-white fs-4 mt-4" style="opacity: 0;"></p>
+
+</div>
+
   <script src="js/login.js"></script>
 </body>
+
 </html>
